[metadata]
name = clista
version = attr: clista.__version__
author = Viet Hung Nguyen
author_email = hvn@familug.org
description = Create interactive web app from any CLI with streamlit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hvnsweeting/clista
project_urls =
    Bug Tracker = https://github.com/hvnsweeting/clista/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.6
packages = find:

[options.packages.find]
where = src
